--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,35 +13,23 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
-        android:id="@+id/latitude"
-        android:layout_alignParentTop="true"
-        android:layout_width="wrap_content"
+        android:id="@+id/schedule_label"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="47.12345" />
-
-    <TextView
-        android:id="@+id/longitude"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="48.54321"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/latitude"
-        android:layout_toEndOf="@+id/latitude"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp" />
-
+        android:gravity="center"
+        tools:text="CITY-ZoneX-WEEKDAY-A" />
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/col"
-        android:layout_below="@id/latitude"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:layout_below="@id/schedule_label">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/schedule_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="gone"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <!-- empty list -->
@@ -49,8 +37,6 @@
             android:id="@+id/recyclerview_empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_anchor="@+id/schedule_list"
-            app:layout_anchorGravity="fill"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -58,7 +44,9 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingStart="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="No Schedule to display" />
+            android:text="@string/no_schedule_to_display"
+            app:layout_anchor="@+id/schedule_list"
+            app:layout_anchorGravity="fill" />
 
     </android.support.design.widget.CoordinatorLayout>
 
