--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Monday, October 17, 2016"/>
+        tools:text="Monday, October 17, 2016" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/black_bin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/black_bin"/>
+            android:text="@string/black_bin" />
+
         <TextView
             android:id="@+id/blue_bin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/blue_bin"/>
+            android:text="@string/blue_bin" />
+
         <TextView
             android:id="@+id/green_bin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/green_bin"/>
+            android:text="@string/green_bin" />
+
         <TextView
             android:id="@+id/garbage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/garbage"/>
+            android:text="@string/garbage" />
+
         <TextView
             android:id="@+id/yard_waste"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/yard_waste" />
-
     </LinearLayout>
+
 </LinearLayout>
