--- a/app/src/main/res/layout/schedule_item_next.xml
+++ b/app/src/main/res/layout/schedule_item_next.xml
@@ -3,16 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:background="@color/grey"
+    android:padding="16dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/date"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
-        tools:text="Monday, October 17, 2016" />
+        tools:text="Monday, October 17" />
 
     <LinearLayout
         android:layout_width="match_parent"
