--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -18,7 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:gravity="center"
-            android:text="@string/choose_location_for_waste_collection" />
+            android:text="@string/choose_location_for_waste_collection"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <Button
             android:id="@+id/button_current_location"
@@ -26,8 +28,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:text="@string/use_current_location"
-            android:drawableBottom="@drawable/ic_my_location_black_24dp" />
+            android:drawableTop="@drawable/ic_my_location_black_48dp"
+            android:minWidth="250dp"
+            android:text="@string/use_current_location" />
 
         <Button
             android:id="@+id/button_choose_location"
@@ -35,8 +38,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="16dp"
-            android:text="@string/select_location_from_map"
-            android:drawableBottom="@drawable/ic_map_black_24dp" />
+            android:drawableTop="@drawable/ic_location_on_black_48dp"
+            android:minWidth="250dp"
+            android:text="@string/select_location_from_map" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
