--- a/app/src/main/res/layout/schedule_item_next.xml
+++ b/app/src/main/res/layout/schedule_item_next.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/date"
-        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
         tools:text="Monday, October 17" />
@@ -18,6 +18,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
         <TextView
@@ -25,6 +26,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:drawableTop="@drawable/ic_sync_black_24dp"
+            android:gravity="center_horizontal"
             android:text="@string/black_bin" />
 
         <TextView
@@ -32,6 +35,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:drawableTop="@drawable/ic_sync_black_24dp"
+            android:gravity="center_horizontal"
             android:text="@string/blue_bin" />
 
         <TextView
@@ -39,6 +44,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:drawableTop="@drawable/ic_trash_black_24dp"
+            android:gravity="center_horizontal"
             android:text="@string/garbage" />
 
         <TextView
@@ -46,6 +53,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:drawableTop="@drawable/ic_sync_black_24dp"
+            android:gravity="center_horizontal"
             android:text="@string/green_bin" />
 
         <TextView
@@ -53,6 +62,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:drawableTop="@drawable/ic_local_florist_black_24dp"
+            android:gravity="center_horizontal"
             android:text="@string/yard_waste" />
     </LinearLayout>
 
