--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white">#FFFFFF</color>
+    <color name="white">@android:color/white</color>
     <color name="grey">#E0E0E0</color>
 
     <color name="colorPrimary">#3F51B5</color>
