--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="black_box">@android:color/black</color>
+    <color name="green_bin">#00A000</color>
+    <color name="blue_box">#0000A0</color>
+    <color name="yard_waste">#00A000</color>
+
 </resources>
