--- a/app/src/main/res/layout/waste_widget.xml
+++ b/app/src/main/res/layout/waste_widget.xml
@@ -74,6 +74,6 @@
         android:scaleType="center"
         android:src="@drawable/ic_trash_black_24dp"
         android:text="@string/garbage"
-        android:tint="@color/white" />
+        android:tint="@color/garbage" />
 
 </FrameLayout>
