--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -3,65 +3,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
     android:background="@color/grey"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textColor="@color/primary_text"
         tools:text="Monday, October 17, 2016" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/black_bin"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableTop="@drawable/ic_sync_black_24dp"
-            android:gravity="center_horizontal"
-            android:text="@string/black_bin" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/blue_bin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/ic_sync_black_24dp"
-            android:gravity="center_horizontal"
-            android:text="@string/blue_bin" />
+            <TextView
+                android:id="@+id/black_bin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/black_box"
+                android:drawableTint="@color/icons"
+                android:drawableTop="@drawable/ic_sync_black_24dp"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="@string/black_bin"
+                android:textColor="@color/primary_light" />
 
-        <TextView
-            android:id="@+id/garbage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/ic_trash_black_24dp"
-            android:gravity="center_horizontal"
-            android:text="@string/garbage" />
+            <TextView
+                android:id="@+id/blue_bin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/blue_box"
+                android:drawableTint="@color/icons"
+                android:drawableTop="@drawable/ic_sync_black_24dp"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="@string/blue_bin"
+                android:textColor="@color/primary_light" />
 
-        <TextView
-            android:id="@+id/green_bin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableTop="@drawable/ic_sync_black_24dp"
-            android:gravity="center_horizontal"
-            android:text="@string/green_bin" />
+            <TextView
+                android:id="@+id/garbage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/garbage"
+                android:drawableTint="@color/icons"
+                android:drawableTop="@drawable/ic_trash_black_24dp"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="@string/garbage"
+                android:textColor="@color/primary_light" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/yard_waste"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:drawableTop="@drawable/ic_local_florist_black_24dp"
-            android:gravity="center_horizontal"
-            android:text="@string/yard_waste" />    </LinearLayout>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/green_bin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/green_bin"
+                android:drawableTint="@color/icons"
+                android:drawableTop="@drawable/ic_sync_black_24dp"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="@string/green_bin"
+                android:textColor="@color/primary_light" />
+
+            <TextView
+                android:id="@+id/yard_waste"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/yard_waste"
+                android:drawableTint="@color/icons"
+                android:drawableTop="@drawable/ic_local_florist_black_24dp"
+                android:gravity="center_horizontal"
+                android:padding="2dp"
+                android:text="@string/yard_waste"
+                android:textColor="@color/primary_light" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
