--- a/app/src/main/res/layout/schedule_item_next.xml
+++ b/app/src/main/res/layout/schedule_item_next.xml
@@ -32,42 +32,30 @@
 
         <TextView
             android:id="@+id/black_bin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/black_box"
             android:drawableTint="@color/icons"
             android:drawableTop="@drawable/ic_recycle_black_24dp"
-            android:gravity="center_horizontal"
-            android:padding="2dp"
             android:text="@string/black_bin"
-            android:textColor="@color/primary_light" />
+            android:textColor="@color/primary_light"
+            style="@style/schedule_next_icon" />
 
         <TextView
             android:id="@+id/blue_bin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/blue_box"
             android:drawableTint="@color/icons"
             android:drawableTop="@drawable/ic_recycle_black_24dp"
-            android:gravity="center_horizontal"
-            android:padding="2dp"
             android:text="@string/blue_bin"
-            android:textColor="@color/primary_light" />
+            android:textColor="@color/primary_light"
+            style="@style/schedule_next_icon"/>
 
         <TextView
             android:id="@+id/garbage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/garbage"
             android:drawableTint="@color/icons"
             android:drawableTop="@drawable/ic_trash_black_24dp"
-            android:gravity="center_horizontal"
-            android:padding="2dp"
             android:text="@string/garbage"
-            android:textColor="@color/primary_light" />
+            android:textColor="@color/primary_light"
+            style="@style/schedule_next_icon"/>
 
     </LinearLayout>
 
@@ -78,29 +66,21 @@
 
         <TextView
             android:id="@+id/green_bin"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/green_bin"
             android:drawableTint="@color/icons"
             android:drawableTop="@drawable/ic_recycle_black_24dp"
-            android:gravity="center_horizontal"
-            android:padding="2dp"
             android:text="@string/green_bin"
-            android:textColor="@color/primary_light" />
+            android:textColor="@color/primary_light"
+            style="@style/schedule_next_icon" />
 
         <TextView
             android:id="@+id/yard_waste"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@color/yard_waste"
             android:drawableTint="@color/icons"
             android:drawableTop="@drawable/ic_local_florist_24dp"
-            android:gravity="center_horizontal"
-            android:padding="2dp"
             android:text="@string/yard_waste"
-            android:textColor="@color/primary_light" />
+            android:textColor="@color/primary_light"
+            style="@style/schedule_next_icon"/>
     </LinearLayout>
 
 </LinearLayout>
