Add settings about Add colored icons Add french translation

--- a/app/src/main/res/layout/list_item_schedule.xml
+++ b/app/src/main/res/layout/list_item_schedule.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:gravity="start"
         android:textColor="@color/primary_text"
         tools:text="Monday, October 17, 2016" />
 
@@ -47,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableTint="@color/blue_box"
-                app:drawableTopCompat="@drawable/ic_recycle_black_24dp"
+                app:drawableTopCompat="@drawable/ic_recycle_blue_24dp"
                 android:gravity="center_horizontal"
                 android:padding="2dp"
                 android:text="@string/blue_bin"
@@ -59,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableTint="@color/garbage"
-                app:drawableTopCompat="@drawable/ic_trash_black_24dp"
+                app:drawableTopCompat="@drawable/ic_trash_brown_24dp"
                 android:gravity="center_horizontal"
                 android:padding="2dp"
                 android:text="@string/garbage"
@@ -78,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableTint="@color/green_bin"
-                app:drawableTopCompat="@drawable/ic_recycle_black_24dp"
+                app:drawableTopCompat="@drawable/ic_recycle_green_24dp"
                 android:gravity="center_horizontal"
                 android:padding="2dp"
                 android:text="@string/green_bin"
@@ -90,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:drawableTint="@color/yard_waste"
-                app:drawableTopCompat="@drawable/ic_local_florist_24dp"
+                app:drawableTopCompat="@drawable/ic_local_florist_green_24dp"
                 android:gravity="center_horizontal"
                 android:padding="2dp"
                 android:text="@string/yard_waste"
