--- a/app/src/main/res/xml/pref_headers.xml
+++ b/app/src/main/res/xml/pref_headers.xml
@@ -7,4 +7,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/pref_header_notifications" />
 
+    <header
+        android:fragment="com.cameocoder.capstoneproject.SettingsActivity$AboutPreferenceFragment"
+        android:icon="@drawable/ic_help_outline_black_24dp"
+        android:title="@string/pref_header_about" />
+
 </preference-headers>
